# PP-2.0

./: .env.example  .gitignore  Dockerfile  Dockerfile.report  LICENSE  README.md  config.py  docker-compose-airflow.yml  docker-compose.minio.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_config.py  train_model.py
.github/workflows/: ci-cd.yml
api/: secrets.py
app/: _init__.py  config.py  main.py
app/api/: __init__.py  dependencies.py  routes.py
app/domain/: entities.py  exceptions.py  interfaces.py
app/infrastructure/: __init__.py  archive_extractor.py  augmentation_service.py  encryption_service.py  image_processor.py  logger.py  metrics.py  model_repository.py  password_hasher.py  s3_storage.py  secret_repository_s3.py  user_repository.py
app/infrastructure/database/: connection.py  models.py  postgres_user_repository.py  report_repository.py
app/infrastructure/security/: bcrypt_hasher.py
app/models/: __init__.py  schemas.py  wagon_model.py
app/presentation/: schemas.py
app/presentation/api/: __init__.py  dependencies.py  routes.py  secrets_router.py
app/presentation/cli/: train_cli.py
app/presentation/static/: index.html  script.js  style.css
app/services/: prediction_service.py
app/static/: index.html  script.js  style.css
app/use_cases/: __init__.py  generate_daily_report.py  login_user.py  predict_side.py  register_user.py  secret_use_cases.py  train_model.py
app/utils/: __init__.py  image_utils.py  logger.py  metrics.py
config/: __init__.py  settings.py
dags/: backup_secrets_bash.py  wagon_daily_report_dag.py
docker/: ml.Dockerfile
models/: best_model.pth
scripts/: add_secrets.py  build_ml_image.sh  create_dummy_model.py  daily_report.py  init_secrets.py  init_secrets_s3.py  test_local.sh
services/: __init__.py  s3_client.py  s3_secrets.py
tests/: test_api.py  test_dummy.py  test_model.py  test_model_compatibility.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_postgres_repository.py
tests/unit/: __init__.py  test_config.py  test_main.py
tests/unit/domain/: __init__.py  test_entities.py  test_entities_secrets.py  test_exceptions.py  test_interfaces.py
tests/unit/infrastructure/: __init__.py  test_connection_mock.py  test_encryption_service.py  test_image_processor.py  test_metrics.py  test_model_repository.py  test_password_hasher.py  test_postgres_user_repository_mock.py
tests/unit/presentation/: __init__.py  test_routes.py  test_routes_unit.py  test_schemas.py
tests/unit/use_cases/: __init__.py  test_login_user.py  test_predict_side.py  test_register_user.py  test_train_model.py
