[project]
name = "pp-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "patool>=1.15.0",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "unrar>=0.4",
    "uvicorn[standard]>=0.39.0",
    "winrar>=0.0.1",
]
